Add About Me section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 
 <body>
     <h2>this is my first portfolio website</h2>
+
+    <section>
+        <h2>About Me</h2>
+        <p>I'm a web developer learning git.</p>
+    </section>
 </body>
 
 </html>
