--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <section>
         <h2>About Me</h2>
-        <p>I'm a web developer learning git.</p>
+        <p>I'm a web developer learning git.(button)</p>
     </section>
 </body>
 
