add button on header

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 
 <body>
-    <h2>this is my first portfolio website</h2>
+    <h2>this is my first portfolio website (button)</h2>
 
     <section>
         <h2>About Me</h2>
-        <p>I'm a web developer learning git.(button)</p>
+        <p>I'm a web developer learning git.</p>
     </section>
 </body>
 
