--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h2>this is my first portfolio website</h2>
+    <h2>this is my first portfolio website(dropdown)</h2>
 
     <section>
         <h2>About Me</h2>
